# lovelyRSS

./: .gitignore  FAVICON_FEATURE.md  Makefile  README.md  badge.md  config.json.template  gemini.md  index.html  last_run.json  latest_feeds.xml  latest_posts.json  latest_rss.xml  plan.md  pyproject.toml  rss.opml  rss.opml.template
.github/workflows/: format_opml.yml  test.yml  update_feeds.yml
scripts/: fetch_feeds.py  utils.py
static/: README.md  custom.css
templates/: index.html
tests/: test_fetch_feeds.py  test_utils.py
